crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_keys_with_escaped_backslash_followed_by_quote.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\"    :k \"a\\\\\"\"#, r#\"\"#].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Keys {
                keys: [
                    Key {
                        kind: Text(
                            "a\\",
                        ),
                        ctrl: false,
                        meta: false,
                        shft: false,
                    },
                ],
            },
            raw: "    :k \"a\\\\\"",
        },
    ],
}
