crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_keys_with_stacked_modifiers.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\"    :k C-M-S-up\"#, r#\"\"#].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Keys {
                keys: [
                    Key {
                        kind: Up,
                        ctrl: true,
                        meta: true,
                        shft: true,
                    },
                ],
            },
            raw: "    :k C-M-S-up",
        },
    ],
}
