crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_snap_with_color_flag.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap --color /foo/x\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 5,
                duration: 1s,
                color: true,
                expect: [],
                filters: [
                    Filter {
                        patt: Regex(
                            "foo",
                        ),
                        paint: "x",
                    },
                ],
            },
            raw: "    :snap --color /foo/x",
        },
    ],
}
