crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_snap_with_count_flag.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap --count 1 /foo/x\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 1,
                duration: 1s,
                color: false,
                expect: [],
                filters: [
                    Filter {
                        patt: Regex(
                            "foo",
                        ),
                        paint: "x",
                    },
                ],
            },
            raw: "    :snap --count 1 /foo/x",
        },
    ],
}
